no scrollbar topics ui fix, else not yet

--- a/style.css
+++ b/style.css
@@ -18,23 +18,12 @@ body {
   background-color: #0f0f0f;
   box-sizing: border-box;
   overflow: -moz-hidden-unscrollable;
+  -ms-overflow-style: none;  
+  scrollbar-width: none;  
 }
 
-*::-webkit-scrollbar {
-  width: 2px;
-}
-
-*::-webkit-scrollbar-track {
-  background: #171717;
-}
-
-*::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 2px;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background: #555;
+::-webkit-scrollbar {
+  display: none;
 }
 
 /* --------- navbar-menu-list -----------*/
@@ -133,7 +122,7 @@ body {
 /* -------------------- site-info ----------------------*/
 
 .info-wrapper {
-  height: 100vh;
+  height: 38rem;
   display: grid;
   place-items: center;
 }
@@ -169,7 +158,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 111vh;
+  min-height: 55rem;
 }
 
 main.table {
@@ -180,7 +169,7 @@ main.table {
   box-shadow: 0 0.4rem 0.8rem #0005;
   border-radius: .8rem;
   overflow: hidden;
-  margin-top: -18px;
+  margin-top: -55px;
 }
 
 .table__body {  
@@ -195,7 +184,7 @@ main.table {
 
 .table__header {
   width: 100%;
-  height: 1.9rem;
+  height: 2.2rem;
   background-color: #171717;
   padding: .5rem 0rem;
   display: flex;
@@ -227,7 +216,7 @@ main.table2 {
 
 #table__header2{
   width: 100%;
-  height: 1.9rem;
+  height: 2.2rem;
   background-color: #171717;
   padding: .5rem 0rem;
   display: flex;
@@ -258,7 +247,7 @@ main.table3 {
 
 #table__header3{
   width: 100%;
-  height: 4rem;
+  height: 2.2rem;
   background-color: #171717;
   padding: .5rem 0rem;
   display: flex;
@@ -279,7 +268,7 @@ main.table4 {
 
 #table__header4{
   width: 100%;
-  height: 4rem;
+  height: 2.2rem;
   background-color: #171717;
   padding: .5rem 0rem;
   display: flex;
@@ -545,7 +534,7 @@ main.tableg, main.tableg2 {
 
 .table__headerg {
   width: 100%;
-  height: 1.9rem;
+  height: 2.2rem;
   background-color: #171717;
   padding: .5rem 0rem;
   display: flex;
